# word-search

./: CMakeLists.txt
application/: CMakeLists.txt
application/src/: main.cpp
core/: CMakeLists.txt
core/include/: EmptyPatternException.h  EmptyTextException.h  Exceptions.h  GlobalDefenitions.h  IllegalPatternSizeException.h  KMPSearch.h  TrivialSearch.h  Utils.h
core/src/: KMPSearch.cpp  TrivialSearch.cpp  Utils.cpp
datasets/: WarOfTheWorlds.txt
include/core/: EmptyPatternException.h  EmptyTextException.h  IllegalPatternSizeException.h  KMPSearch.h  TrivialSearch.h
tests/: CMakeLists.txt
tests/src/: KMPSearchTest.cpp  TrivialSearchTest.cpp
